--- a/.github/workflows/distribute-grain.yml
+++ b/.github/workflows/distribute-grain.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Load Data and Compute Cred 🧮
         run: |
-          yarn load
+          bash scripts/keep_loading.sh
           yarn sourcecred contributions
           yarn sourcecred credequate
           node scripts/wolf-turtle-bear.js
