--- a/.github/workflows/generate-instance.yml
+++ b/.github/workflows/generate-instance.yml
@@ -31,7 +31,9 @@ jobs:
 
       - name: Load Data and Compute Cred 🧮
         run: |
-          yarn sourcecred load
+          mkdir -p cache/sourcecred/discord
+          wget --output-document=cache/sourcecred/discord/discordMirror-792908935774076938.db ${{ secrets.CACHED_DB_PREFIX }}discordMirror-621759717756370964.db
+          wget --output-document=cache/sourcecred/discord/discordMirror-792908935774076938.db ${{ secrets.CACHED_DB_PREFIX }}discordMirror-792908935774076938.db
           mkdir -p output/contributions/sourcecred/discord
           yarn sourcecred contributions
           yarn sourcecred credequate
